# FarmTwin360-

./: .gitignore  .replit  MOBILE_APP_SETUP.md  README.md  START_MOBILE_DEV.bat  ai_engine.py  app.py  auth.py  database.py  generate_retroactive_notifications.py  models.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  translations.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Build-a-complete-FarmTwin-360-project-IoT-free-hackathon-ready-as-a-full-stack-application-incl-1761160529987_1761160529989.txt
components/: admin.py  analytics.py  approvals.py  dashboard.py  notifications.py  role_dashboards.py  visitor.py  visualization.py  worker.py
mobile-app/: App.js  AppWithAllScreens.js  README.md  READY_TO_RUN.md  app.json  package-lock.json  package.json
mobile-app/screens/: AdminBarnManagementScreen.js  AdminFarmAssignmentsScreen.js  AdminFarmManagementScreen.js  AdminSystemStatsScreen.js  AdminUserManagementScreen.js  AnalyticsScreen.js  ChecklistScreen.js  DashboardScreen.js  IncidentScreen.js  LoginScreen.js  ManagerApprovalsScreen.js  ProfileScreen.js
mobile-app/screens/dashboards/: AdminDashboard.js
mobile-app/services/: api.js
mobile-app/utils/: responsive.js
mobile-backend/: api.py  init_database.py  start_server.py  test_login.py
